@@ -32,6 +32,7 @@ IQTIME		= "jabber:iq:time"
 IQLAST		= "jabber:iq:last"
 VCARD		= "vcard-temp"
 VCARDUPDATE	= "vcard-temp:x:update"
+VCARDFILTER	= "vcard-temp-filter"
 XOOB		= "jabber:x:oob"
 XAVATAR		= "jabber:x:avatar"
 XCONFERENCE	= "jabber:x:conference"
